SynProdGITV1/force-app/main/default/objects/Activity/fields/Activity_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Activity_External_Id__c</fullName>
    <description>Activity external id used for data migration</description>
    <externalId>true</externalId>
    <label>Activity External Id</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>