SynProdGITV1/force-app/main/default/objects/Activity/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <description>This formula field displays the name of the user who owns the record, typically used to show the owner of an Visti.</description>
    <formula>Owner:User.FirstName &amp; &quot; &quot; &amp; Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned To</label>
    <type>Text</type>
</CustomField>