SynProdGITV1/force-app/main/default/objects/Activity/fields/Effective_Check_Results__c.field-meta.xml
<CustomField>
    <fullName>Effective_Check_Results__c</fullName>
    <description>Captures the outcome or findings from verifying the effectiveness of the complaint treatment.
This field is mandatory only for Effectiveness Check (EC) tasks to ensure proper documentation of the results.
It can be ignored for all other task types.</description>
    <inlineHelpText>Describe the results of the effectiveness check. Required only if the task type is Effectiveness Check.</inlineHelpText>
    <label>Effective Check Results</label>
    <type>TextArea</type>
</CustomField>