SynProdGITV1/force-app/main/default/objects/Activity/fields/Effectiveness_Check__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is populated via a flow and is used in the record page&apos;s filter criteria to hide the Delete button from Sales users when the task type is &apos;Effectiveness Check&apos;.[Hidden from UI]</description>
    <label>Effectiveness Check</label>
    <type>Checkbox</type>
</CustomField>