SynProdGITV1/force-app/main/default/objects/Activity/fields/Effectiveness_Check_Method__c.field-meta.xml
<CustomField>
    <fullName>Effectiveness_Check_Method__c</fullName>
    <description>Captures details on how the effectiveness of the complaint treatment will be verified. This field is required only for Effectiveness Check (EC) tasks to ensure proper documentation of verification methods.</description>
    <inlineHelpText>Describe how the effectiveness of the complaint treatment will be verified.
(Required only for Effectiveness Check tasks.)</inlineHelpText>
    <label>Effectiveness Check Method</label>
    <type>TextArea</type>
</CustomField>