SynProdGITV1/force-app/main/default/objects/Activity/fields/HQ_Account__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account__c</fullName>
    <description>This field helps link subsidiary or regional accounts to their corresponding parent or headquarters accounts for better organization and reporting.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp; Visit_Account__r.HQ_Account__r.Id, Visit_Account__r.HQ_Account__r.Name, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ Account</label>
    <type>Text</type>
</CustomField>