SynProdGITV1/force-app/main/default/objects/Activity/fields/HQ_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>HQ_Account_Id__c</fullName>
    <description>This formula field stores the Account ID of the associated HQ Account</description>
    <formula>CASESAFEID(Visit_Account__r.HQ_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HQ Account Id</label>
    <type>Text</type>
</CustomField>