SynProdGITV1/force-app/main/default/objects/Activity/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SSP-288/SS2-T66: Look up to custom Industry segment object with filter to select only Industry Segment</description>
    <label>Industry Segment</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Industry_Segment_Data__c.Level__c</field>
            <operation>equals</operation>
            <value>Industry Segment</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Industry_Segment_Data__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>