SynProdGITV1/force-app/main/default/objects/Activity/fields/LabsActionPlans__TaskAPTask__c.field-meta.xml
<CustomField>
    <fullName>LabsActionPlans__TaskAPTask__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ActionPlans - related Action Plan Task</description>
    <label>Action Plan Task</label>
    <referenceTo>LabsActionPlans__APTask__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>