SynProdGITV1/force-app/main/default/objects/Activity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Category</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product_Category__c.Level__c</field>
            <operation>equals</operation>
            <value>2 - Chemical Group</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product_Category__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>