SynProdGITV1/force-app/main/default/objects/Activity/fields/RHQ_Account__c.field-meta.xml
<CustomField>
    <fullName>RHQ_Account__c</fullName>
    <description>Represents the account that serves as the Regional Headquarters (RHQ) for a specific region or business unit.</description>
    <formula>HYPERLINK(&apos;/&apos; &amp;  Visit_Account__r.RHQ_Account__c ,  Visit_Account__r.RHQ_Account__r.Name , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RHQ Account</label>
    <type>Text</type>
</CustomField>