SynProdGITV1/force-app/main/default/objects/Activity/fields/RHQ_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>RHQ_Account_Id__c</fullName>
    <description>This formula field stores the Account ID of the associated RHQ Account.</description>
    <formula>CASESAFEID(Visit_Account__r.RHQ_Account__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RHQ Account Id</label>
    <type>Text</type>
</CustomField>