SynProdGITV1/force-app/main/default/objects/Activity/fields/Visit_Account__c.field-meta.xml
<CustomField>
    <fullName>Visit_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup field that associates a specific Visit Account with a record</description>
    <label>Visit Account</label>
    <referenceTo>Visit_Account__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>