SynProdGITV1/force-app/main/default/objects/Activity/fields/Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visit Completed</label>
    <type>Checkbox</type>
</CustomField>