SynProdGITV1/force-app/main/default/objects/Activity/fields/Visit_Location__c.field-meta.xml
<CustomField>
    <fullName>Visit_Location__c</fullName>
    <description>This field ensures that the correct location is recorded for efficient planning, navigation, and follow-up.</description>
    <label>Visit Location</label>
    <type>Address</type>
</CustomField>