SynProdGITV1/force-app/main/default/objects/Activity/fields/Visit_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field helps track the result or status of the visit, which can be used for reporting and follow-up actions.</description>
    <label>Visit Outcome</label>
    <referenceTo>Visit_Outcome__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>